--- a/index1.html
+++ b/index1.html
@@ -6,21 +6,21 @@
   <title>Document</title>
   <style>
     body {
-      background-image: url("docs/assets_img/EFK logo.jpg");
+      background-image: url("docs/assets_img/karate.jpg");
       background-position:inherit;
       background-size: cover;
       background-repeat: no-repeat;
+      background-attachment:fixed;
     }
-    img {
-      opacity: 0.5;
-    }
+
   </style>
   <link rel="stylesheet"  href="style.css">
 </head>
 <body>
-  <Header>Elite Freestyle Karate</Header>
+  <!-- <Header>Elite Freestyle Karate</Header> -->
 
 <main>
+  <img src="/docs/assets_img/EFK logo.jpg" alt="EFK Logo" width="150" height="150">
   <nav>Hamburger</nav>
   <div>
     <h1>ELite Freestyle Karate Performance Tracking App</h1>
